--- a/generate_dataset.ipynb
+++ b/generate_dataset.ipynb
@@ -646,24 +646,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rdx_min = 117623\n",
-    "rdx_max = 122646\n",
-    "rdy_min = 483348\n",
-    "rdy_max = 485407\n",
+    "rdx_min = 119623\n",
+    "rdx_max = 121646\n",
+    "rdy_min = 483648\n",
+    "rdy_max = 485107\n",
     "\n",
     "df_kadam = data[(data['x'] > rdx_min) & \n",
     "               (data['x'] < rdx_max) &\n",
@@ -671,6 +661,416 @@
     "              (data['y'] < rdy_max)]\n",
     "\n",
     "df_kadam.to_csv('final-amsterdamzuid.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>openbareruimtenaam</th>\n",
+       "      <th>huisnummer</th>\n",
+       "      <th>huisletter</th>\n",
+       "      <th>huisnummertoevoeging</th>\n",
+       "      <th>postcode</th>\n",
+       "      <th>buurtnaam</th>\n",
+       "      <th>buurtcode</th>\n",
+       "      <th>wijknaam</th>\n",
+       "      <th>wijkcode</th>\n",
+       "      <th>woonplaats</th>\n",
+       "      <th>...</th>\n",
+       "      <th>aantal_pand_relaties_dit_vbo</th>\n",
+       "      <th>pand_id</th>\n",
+       "      <th>aantal_vbo_relaties_dit_pnd</th>\n",
+       "      <th>vbo_pnd_1_op_1</th>\n",
+       "      <th>opp_pand</th>\n",
+       "      <th>woningtype</th>\n",
+       "      <th>omtrek_pand</th>\n",
+       "      <th>verhouding_opp_vbo_opp_pnd</th>\n",
+       "      <th>pandstatus</th>\n",
+       "      <th>bouwjaar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64596</th>\n",
+       "      <td>Pieter Baststraat</td>\n",
+       "      <td>24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1017TX</td>\n",
+       "      <td>Duivelseiland</td>\n",
+       "      <td>BU03634709</td>\n",
+       "      <td>Museumkwartier</td>\n",
+       "      <td>WK036347</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>Verbouwing pand</td>\n",
+       "      <td>1905.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73947</th>\n",
+       "      <td>Groenendaalstraat</td>\n",
+       "      <td>34</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1018LH</td>\n",
+       "      <td>Westlandgrachtbuurt</td>\n",
+       "      <td>BU03634401</td>\n",
+       "      <td>Hoofddorppleinbuurt</td>\n",
+       "      <td>WK036344</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>1933.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234651</th>\n",
+       "      <td>Sloterkade</td>\n",
+       "      <td>54</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1058HG</td>\n",
+       "      <td>Surinamepleinbuurt</td>\n",
+       "      <td>BU03634400</td>\n",
+       "      <td>Hoofddorppleinbuurt</td>\n",
+       "      <td>WK036344</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>Tussen of geschakelde woning</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>1910.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234652</th>\n",
+       "      <td>Sloterkade</td>\n",
+       "      <td>55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1058HG</td>\n",
+       "      <td>Surinamepleinbuurt</td>\n",
+       "      <td>BU03634400</td>\n",
+       "      <td>Hoofddorppleinbuurt</td>\n",
+       "      <td>WK036344</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>Tussen of geschakelde woning</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>1910.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234653</th>\n",
+       "      <td>Sloterkade</td>\n",
+       "      <td>56</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1058HG</td>\n",
+       "      <td>Surinamepleinbuurt</td>\n",
+       "      <td>BU03634400</td>\n",
+       "      <td>Hoofddorppleinbuurt</td>\n",
+       "      <td>WK036344</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>Tussen of geschakelde woning</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>1910.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9513314</th>\n",
+       "      <td>Willem Royaardsstraat</td>\n",
+       "      <td>18</td>\n",
+       "      <td>G</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Diepenbrockbuurt</td>\n",
+       "      <td>BU03634900</td>\n",
+       "      <td>Apollobuurt</td>\n",
+       "      <td>WK036349</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>1938.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9518655</th>\n",
+       "      <td>Zuidplein</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Zuidas Noord</td>\n",
+       "      <td>BU03632300</td>\n",
+       "      <td>Zuidas</td>\n",
+       "      <td>WK036323</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>34.42</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>2021.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9518656</th>\n",
+       "      <td>Zuidplein</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Zuidas Noord</td>\n",
+       "      <td>BU03632300</td>\n",
+       "      <td>Zuidas</td>\n",
+       "      <td>WK036323</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3467.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>1981.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9518657</th>\n",
+       "      <td>Zuidplein</td>\n",
+       "      <td>26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Zuidas Noord</td>\n",
+       "      <td>BU03632300</td>\n",
+       "      <td>Zuidas</td>\n",
+       "      <td>WK036323</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4831.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>311.0</td>\n",
+       "      <td>5.03</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>2004.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9518658</th>\n",
+       "      <td>Zuidplein</td>\n",
+       "      <td>42</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Zuidas Noord</td>\n",
+       "      <td>BU03632300</td>\n",
+       "      <td>Zuidas</td>\n",
+       "      <td>WK036323</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.631000e+14</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4831.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>311.0</td>\n",
+       "      <td>5.03</td>\n",
+       "      <td>Pand in gebruik</td>\n",
+       "      <td>2004.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70415 rows × 42 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            openbareruimtenaam  huisnummer huisletter huisnummertoevoeging  \\\n",
+       "64596        Pieter Baststraat          24        NaN                    5   \n",
+       "73947        Groenendaalstraat          34        NaN                    3   \n",
+       "234651              Sloterkade          54        NaN                  NaN   \n",
+       "234652              Sloterkade          55        NaN                  NaN   \n",
+       "234653              Sloterkade          56        NaN                  NaN   \n",
+       "...                        ...         ...        ...                  ...   \n",
+       "9513314  Willem Royaardsstraat          18          G                  NaN   \n",
+       "9518655              Zuidplein           5        NaN                  NaN   \n",
+       "9518656              Zuidplein          10        NaN                  NaN   \n",
+       "9518657              Zuidplein          26        NaN                  NaN   \n",
+       "9518658              Zuidplein          42        NaN                  NaN   \n",
+       "\n",
+       "        postcode            buurtnaam   buurtcode             wijknaam  \\\n",
+       "64596     1017TX        Duivelseiland  BU03634709       Museumkwartier   \n",
+       "73947     1018LH  Westlandgrachtbuurt  BU03634401  Hoofddorppleinbuurt   \n",
+       "234651    1058HG   Surinamepleinbuurt  BU03634400  Hoofddorppleinbuurt   \n",
+       "234652    1058HG   Surinamepleinbuurt  BU03634400  Hoofddorppleinbuurt   \n",
+       "234653    1058HG   Surinamepleinbuurt  BU03634400  Hoofddorppleinbuurt   \n",
+       "...          ...                  ...         ...                  ...   \n",
+       "9513314      NaN     Diepenbrockbuurt  BU03634900          Apollobuurt   \n",
+       "9518655      NaN         Zuidas Noord  BU03632300               Zuidas   \n",
+       "9518656      NaN         Zuidas Noord  BU03632300               Zuidas   \n",
+       "9518657      NaN         Zuidas Noord  BU03632300               Zuidas   \n",
+       "9518658      NaN         Zuidas Noord  BU03632300               Zuidas   \n",
+       "\n",
+       "         wijkcode woonplaats  ...  aantal_pand_relaties_dit_vbo       pand_id  \\\n",
+       "64596    WK036347  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "73947    WK036344  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "234651   WK036344  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "234652   WK036344  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "234653   WK036344  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "...           ...        ...  ...                           ...           ...   \n",
+       "9513314  WK036349  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "9518655  WK036323  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "9518656  WK036323  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "9518657  WK036323  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "9518658  WK036323  Amsterdam  ...                           1.0  3.631000e+14   \n",
+       "\n",
+       "        aantal_vbo_relaties_dit_pnd vbo_pnd_1_op_1  opp_pand  \\\n",
+       "64596                           6.0            0.0      79.0   \n",
+       "73947                           4.0            0.0      61.0   \n",
+       "234651                          1.0            1.0      67.0   \n",
+       "234652                          1.0            1.0     107.0   \n",
+       "234653                          1.0            1.0      51.0   \n",
+       "...                             ...            ...       ...   \n",
+       "9513314                         1.0            1.0      19.0   \n",
+       "9518655                         1.0            1.0      53.0   \n",
+       "9518656                         1.0            1.0    3467.0   \n",
+       "9518657                        60.0            0.0    4831.0   \n",
+       "9518658                        60.0            0.0    4831.0   \n",
+       "\n",
+       "                           woningtype  omtrek_pand  \\\n",
+       "64596                     Appartement         40.0   \n",
+       "73947                     Appartement         33.0   \n",
+       "234651   Tussen of geschakelde woning         41.0   \n",
+       "234652   Tussen of geschakelde woning         49.0   \n",
+       "234653   Tussen of geschakelde woning         29.0   \n",
+       "...                               ...          ...   \n",
+       "9513314                           NaN         19.0   \n",
+       "9518655                           NaN         35.0   \n",
+       "9518656                           NaN        455.0   \n",
+       "9518657                           NaN        311.0   \n",
+       "9518658                           NaN        311.0   \n",
+       "\n",
+       "         verhouding_opp_vbo_opp_pnd       pandstatus  bouwjaar  \n",
+       "64596                          4.70  Verbouwing pand    1905.0  \n",
+       "73947                          4.05  Pand in gebruik    1933.0  \n",
+       "234651                         1.13  Pand in gebruik    1910.0  \n",
+       "234652                         1.81  Pand in gebruik    1910.0  \n",
+       "234653                         0.84  Pand in gebruik    1910.0  \n",
+       "...                             ...              ...       ...  \n",
+       "9513314                        0.95  Pand in gebruik    1938.0  \n",
+       "9518655                       34.42  Pand in gebruik    2021.0  \n",
+       "9518656                        0.97  Pand in gebruik    1981.0  \n",
+       "9518657                        5.03  Pand in gebruik    2004.0  \n",
+       "9518658                        5.03  Pand in gebruik    2004.0  \n",
+       "\n",
+       "[70415 rows x 42 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_kadam"
    ]
   },
   {
