--- a/dummy_data_neighborhood.ipynb
+++ b/dummy_data_neighborhood.ipynb
@@ -94,7 +94,15 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>521</th>\n",
+       "      <th>515</th>\n",
+       "      <td>Zuidwestkwadrant Indische buurt</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
        "      <td>Zuidwestkwadrant Osdorp Noord</td>\n",
        "      <td>7</td>\n",
        "      <td>0</td>\n",
@@ -102,7 +110,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>522</th>\n",
+       "      <th>517</th>\n",
        "      <td>Zuidwestkwadrant Osdorp Zuid</td>\n",
        "      <td>12</td>\n",
        "      <td>0</td>\n",
@@ -110,7 +118,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>523</th>\n",
+       "      <th>518</th>\n",
        "      <td>Zunderdorp</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
@@ -118,39 +126,31 @@
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>524</th>\n",
+       "      <th>519</th>\n",
        "      <td>Zwarte Gouw</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>525</th>\n",
-       "      <td>de Plantage</td>\n",
-       "      <td>8</td>\n",
-       "      <td>105</td>\n",
-       "      <td>56</td>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>526 rows × 5 columns</p>\n",
+       "<p>520 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      neighborhood  incident  \\\n",
-       "0                              AMC         1   \n",
-       "1            Aalsmeerwegbuurt Oost         5   \n",
-       "2            Aalsmeerwegbuurt West         1   \n",
-       "3                   Aetsveld Noord         0   \n",
-       "4                    Aetsveld Zuid         0   \n",
-       "..                             ...       ...   \n",
-       "521  Zuidwestkwadrant Osdorp Noord         7   \n",
-       "522   Zuidwestkwadrant Osdorp Zuid        12   \n",
-       "523                     Zunderdorp         0   \n",
-       "524                    Zwarte Gouw         0   \n",
-       "525                    de Plantage         8   \n",
+       "                        neighborhood  incident  \\\n",
+       "0                                AMC         1   \n",
+       "1              Aalsmeerwegbuurt Oost         5   \n",
+       "2              Aalsmeerwegbuurt West         1   \n",
+       "3                     Aetsveld Noord         0   \n",
+       "4                      Aetsveld Zuid         0   \n",
+       "..                               ...       ...   \n",
+       "515  Zuidwestkwadrant Indische buurt         8   \n",
+       "516    Zuidwestkwadrant Osdorp Noord         7   \n",
+       "517     Zuidwestkwadrant Osdorp Zuid        12   \n",
+       "518                       Zunderdorp         0   \n",
+       "519                      Zwarte Gouw         0   \n",
        "\n",
        "     nr_of_inspections_within_timeline  nr_of_inspections_with_observation  \\\n",
        "0                                    0                                   0   \n",
@@ -159,11 +159,11 @@
        "3                                    0                                   0   \n",
        "4                                    0                                   0   \n",
        "..                                 ...                                 ...   \n",
-       "521                                  0                                   0   \n",
-       "522                                  0                                   0   \n",
-       "523                                 29                                   4   \n",
-       "524                                  0                                   0   \n",
-       "525                                105                                  56   \n",
+       "515                                  0                                   0   \n",
+       "516                                  0                                   0   \n",
+       "517                                  0                                   0   \n",
+       "518                                 29                                   4   \n",
+       "519                                  0                                   0   \n",
        "\n",
        "     nr_of_inspections_without_observation  \n",
        "0                                        0  \n",
@@ -172,13 +172,13 @@
        "3                                        0  \n",
        "4                                        0  \n",
        "..                                     ...  \n",
-       "521                                      0  \n",
-       "522                                      0  \n",
-       "523                                     25  \n",
-       "524                                      0  \n",
-       "525                                     49  \n",
+       "515                                      0  \n",
+       "516                                      0  \n",
+       "517                                      0  \n",
+       "518                                     25  \n",
+       "519                                      0  \n",
        "\n",
-       "[526 rows x 5 columns]"
+       "[520 rows x 5 columns]"
       ]
      },
      "execution_count": 2,
@@ -189,6 +189,8 @@
    "source": [
     "df_dummy = pd.read_csv('dummy_def.csv', delimiter = ';') \n",
     "df_dummy = df_dummy[['neighborhood', 'incident', 'nr_of_inspections_within_timeline', 'nr_of_inspections_with_observation', 'nr_of_inspections_without_observation']]\n",
+    "df_dummy = df_dummy.replace({'Overtoomse veld Zuid':'Overtoomse Veld Zuid', 'Rai':'RAI', 'Zuidwestkadrant Indische buurt':'Zuidwestkwadrant Indische buurt', 'BelgiÃ«plein e.o.':'Belgieplein e.o.', \n",
+    "                             'Jacques Veldmanbuurt':'Jacques Veltmanbuurt', 'de Plantage':'De Plantage', 'Pieter van Doesburgbuurt':'Pieter van der Doesbuurt', 'Nintermanterrein':'Nintemanterrein'})\n",
     "df_dummy = df_dummy.groupby(['neighborhood'], as_index = False).agg({'incident': 'sum', 'nr_of_inspections_within_timeline' : 'sum', 'nr_of_inspections_with_observation' : 'sum', 'nr_of_inspections_without_observation' : 'sum'})\n",
     "df_dummy"
    ]
