added buurtnaam to leeftijd file

--- a/bouwjaar, leeftijd en bevolkingsdichtheid.ipynb
+++ b/bouwjaar, leeftijd en bevolkingsdichtheid.ipynb
@@ -22,7 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
+   "id": "02f003a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "c54f5314",
    "metadata": {},
    "outputs": [],
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "670a6397",
    "metadata": {},
    "outputs": [
@@ -225,7 +237,7 @@
        "[479 rows x 8 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "id": "36a0e2e0",
    "metadata": {},
    "outputs": [
@@ -251,7 +263,7 @@
     }
    ],
    "source": [
-    "buurten = df_code['buurtnaam2020']\n",
+    "buurten = list(df_code['buurtnaam2020'])\n",
     "wijken = df_code['WK_NAAM'].unique()\n",
     "print(len(buurten))\n",
     "print(len(wijken))"
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "c7c88266",
    "metadata": {
     "scrolled": true
@@ -638,7 +650,7 @@
        "[579 rows x 18 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "id": "8883d3d3",
    "metadata": {
     "scrolled": true
@@ -821,7 +833,7 @@
        "[479 rows x 6 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,18 +847,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "id": "973c4de4",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_buurt.insert(3, '% Leeftijd 0-15', (df_buurt['Leeftijd 0-15'] / df_buurt['InwonersTotaal']) *100)\n",
-    "df_buurt.insert(5, '% Leeftijd 65+', (df_buurt['Leeftijd 65+'] / df_buurt['InwonersTotaal']) *100)"
+    "df_buurt.insert(5, '% Leeftijd 65+', (df_buurt['Leeftijd 65+'] / df_buurt['InwonersTotaal']) *100)\n",
+    "df_buurt.insert(1, 'BuurtNaam', buurten)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 21,
    "id": "0c38ebfc",
    "metadata": {
     "scrolled": true
@@ -874,6 +887,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>BuurtCode</th>\n",
+       "      <th>BuurtNaam</th>\n",
        "      <th>InwonersTotaal</th>\n",
        "      <th>Leeftijd 0-15</th>\n",
        "      <th>% Leeftijd 0-15</th>\n",
@@ -887,6 +901,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>BU03630000</td>\n",
+       "      <td>Kop Zeedijk</td>\n",
        "      <td>1110</td>\n",
        "      <td>45</td>\n",
        "      <td>4.054054</td>\n",
@@ -898,6 +913,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>BU03630001</td>\n",
+       "      <td>Oude Kerk e.o.</td>\n",
        "      <td>695</td>\n",
        "      <td>20</td>\n",
        "      <td>2.877698</td>\n",
@@ -909,6 +925,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>BU03630002</td>\n",
+       "      <td>Burgwallen Oost</td>\n",
        "      <td>1645</td>\n",
        "      <td>90</td>\n",
        "      <td>5.471125</td>\n",
@@ -920,6 +937,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>BU03630003</td>\n",
+       "      <td>Nes e.o.</td>\n",
        "      <td>365</td>\n",
        "      <td>25</td>\n",
        "      <td>6.849315</td>\n",
@@ -931,6 +949,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>BU03630004</td>\n",
+       "      <td>BG-terrein e.o.</td>\n",
        "      <td>690</td>\n",
        "      <td>40</td>\n",
        "      <td>5.797101</td>\n",
@@ -949,10 +968,12 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573</th>\n",
        "      <td>BU03639701</td>\n",
+       "      <td>Gein Zuidwest</td>\n",
        "      <td>1665</td>\n",
        "      <td>310</td>\n",
        "      <td>18.618619</td>\n",
@@ -964,6 +985,7 @@
        "    <tr>\n",
        "      <th>574</th>\n",
        "      <td>BU03639702</td>\n",
+       "      <td>Gein Noordoost</td>\n",
        "      <td>3245</td>\n",
        "      <td>450</td>\n",
        "      <td>13.867488</td>\n",
@@ -975,6 +997,7 @@
        "    <tr>\n",
        "      <th>575</th>\n",
        "      <td>BU03639703</td>\n",
+       "      <td>Gein Zuidoost</td>\n",
        "      <td>3355</td>\n",
        "      <td>510</td>\n",
        "      <td>15.201192</td>\n",
@@ -986,6 +1009,7 @@
        "    <tr>\n",
        "      <th>577</th>\n",
        "      <td>BU03639800</td>\n",
+       "      <td>Dorp Driemond</td>\n",
        "      <td>1480</td>\n",
        "      <td>265</td>\n",
        "      <td>17.905405</td>\n",
@@ -997,6 +1021,7 @@
        "    <tr>\n",
        "      <th>578</th>\n",
        "      <td>BU03639801</td>\n",
+       "      <td>Landelijk gebied Driemond</td>\n",
        "      <td>140</td>\n",
        "      <td>45</td>\n",
        "      <td>32.142857</td>\n",
@@ -1007,40 +1032,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>479 rows × 8 columns</p>\n",
+       "<p>479 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      BuurtCode  InwonersTotaal  Leeftijd 0-15  % Leeftijd 0-15  Leeftijd 65+  \\\n",
-       "2    BU03630000            1110             45         4.054054           100   \n",
-       "3    BU03630001             695             20         2.877698            70   \n",
-       "4    BU03630002            1645             90         5.471125           180   \n",
-       "5    BU03630003             365             25         6.849315            30   \n",
-       "6    BU03630004             690             40         5.797101            80   \n",
-       "..          ...             ...            ...              ...           ...   \n",
-       "573  BU03639701            1665            310        18.618619           125   \n",
-       "574  BU03639702            3245            450        13.867488           660   \n",
-       "575  BU03639703            3355            510        15.201192           630   \n",
-       "577  BU03639800            1480            265        17.905405           275   \n",
-       "578  BU03639801             140             45        32.142857            10   \n",
+       "      BuurtCode                  BuurtNaam  InwonersTotaal  Leeftijd 0-15  \\\n",
+       "2    BU03630000                Kop Zeedijk            1110             45   \n",
+       "3    BU03630001             Oude Kerk e.o.             695             20   \n",
+       "4    BU03630002            Burgwallen Oost            1645             90   \n",
+       "5    BU03630003                   Nes e.o.             365             25   \n",
+       "6    BU03630004            BG-terrein e.o.             690             40   \n",
+       "..          ...                        ...             ...            ...   \n",
+       "573  BU03639701              Gein Zuidwest            1665            310   \n",
+       "574  BU03639702             Gein Noordoost            3245            450   \n",
+       "575  BU03639703              Gein Zuidoost            3355            510   \n",
+       "577  BU03639800              Dorp Driemond            1480            265   \n",
+       "578  BU03639801  Landelijk gebied Driemond             140             45   \n",
        "\n",
-       "     % Leeftijd 65+ GemiddeldeHuishoudensgrootte Bevolkingsdichtheid  \n",
-       "2          9.009009                          1.4               18349  \n",
-       "3         10.071942                          1.4                7910  \n",
-       "4         10.942249                          1.4               26460  \n",
-       "5          8.219178                          1.5                6883  \n",
-       "6         11.594203                          1.4                8161  \n",
-       "..              ...                          ...                 ...  \n",
-       "573        7.507508                          1.9                9544  \n",
-       "574       20.338983                          2.3                5109  \n",
-       "575       18.777943                          2.0                4676  \n",
-       "577       18.581081                          2.3                5099  \n",
-       "578        7.142857                          3.5                  98  \n",
+       "     % Leeftijd 0-15  Leeftijd 65+  % Leeftijd 65+  \\\n",
+       "2           4.054054           100        9.009009   \n",
+       "3           2.877698            70       10.071942   \n",
+       "4           5.471125           180       10.942249   \n",
+       "5           6.849315            30        8.219178   \n",
+       "6           5.797101            80       11.594203   \n",
+       "..               ...           ...             ...   \n",
+       "573        18.618619           125        7.507508   \n",
+       "574        13.867488           660       20.338983   \n",
+       "575        15.201192           630       18.777943   \n",
+       "577        17.905405           275       18.581081   \n",
+       "578        32.142857            10        7.142857   \n",
        "\n",
-       "[479 rows x 8 columns]"
+       "    GemiddeldeHuishoudensgrootte Bevolkingsdichtheid  \n",
+       "2                            1.4               18349  \n",
+       "3                            1.4                7910  \n",
+       "4                            1.4               26460  \n",
+       "5                            1.5                6883  \n",
+       "6                            1.4                8161  \n",
+       "..                           ...                 ...  \n",
+       "573                          1.9                9544  \n",
+       "574                          2.3                5109  \n",
+       "575                          2.0                4676  \n",
+       "577                          2.3                5099  \n",
+       "578                          3.5                  98  \n",
+       "\n",
+       "[479 rows x 9 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 22,
    "id": "86aca7ac",
    "metadata": {},
    "outputs": [],
